---
source: tests/ui/errors/mod.rs
---
  [error] Syntax error
   ╭─[test.lis:5:28]
 4 │ fn test() {
 5 │   let p = Point { x: 1, .. };
   ·                            ┬
   ·                            ╰── not allowed
 6 │ }
   ╰────
  help: Use `..struct` to spread the fields of one struct into another · code: [parse.syntax_error]
